# INF584-Image-Synthesis

./: .gitignore  README.md
Basic Ray Tracer/: CMakeLists.txt
Basic Ray Tracer/Resources/Shaders/: PBRFragmentShader.glsl  PBRVertexShader.glsl
Basic Ray Tracer/Sources/: Camera.cpp  Camera.h  Main.cpp  MeshLoader.cpp  Rasterizer.cpp  Rasterizer.h  RayTracer.cpp  RayTracer.h  Scene.h
LightCuts Implementation/: CMakeLists.txt  LightCuts  README.md
LightCuts Implementation/Resources/Shaders/: DisplayFragmentShader.glsl  DisplayVertexShader.glsl  PBRFragmentShader.glsl  PBRVertexShader.glsl
LightCuts Implementation/Sources/: Camera.cpp  Camera.h  Error.cpp  IO.h  Image.h  LightSource.h  Main.cpp  PBR.h  Rasterizer.cpp  Rasterizer.h  Ray.cpp  RayTracer.cpp  Renderer.h  Resources.h  Scene.h
Physically Based Rendering/: CMakeLists.txt
Physically Based Rendering/Resources/Shaders/: PBRFragmentShader.glsl
Physically Based Rendering/Sources/: BVH.cpp  BVH.h  Camera.h  Main.cpp  Mesh.h  Rasterizer.cpp  Ray.h  RayTracer.cpp  RayTracer.h  Scene.h
Procedural Phasor Noise Implementation/: CMakeLists.txt  Procedural_Phasor_Noise  README.md
Procedural Phasor Noise Implementation/Resources/Models/: ram.off
Procedural Phasor Noise Implementation/Resources/Shaders/: PPNFragmentShader.glsl  PPNVertexShader.glsl
Procedural Phasor Noise Implementation/Sources/: Camera.h  Console.cpp  IO.cpp  Image.cpp  Main.cpp  Material.h  Mesh.cpp  Mesh.h  Rasterizer.cpp  Rasterizer.h  Resources.h  ShaderProgram.cpp
